@@ -1,0 +1,88 @@
+# Copyright (c) 1997 by Free Software Foundation Inc.
+# Portions Copyright (c) 1996 by Internet Software Consortium Inc.
+#
+# Permission to use, copy, modify, and distribute this software for any
+# purpose with or without fee is hereby granted, provided that the above
+# copyright notice and this permission notice appear in all copies.
+#
+# THE SOFTWARE IS PROVIDED "AS IS" AND INTERNET SOFTWARE CONSORTIUM DISCLAIMS
+# ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES
+# OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL INTERNET SOFTWARE
+# CONSORTIUM BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL
+# DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR
+# PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS
+# ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
+# SOFTWARE.
+
+# $Id$
+
+# these are only appropriate for BSD 4.4 or derivatives, and are used in
+# development.  normal builds will be done in the top level directory and
+# this Makefile will be invoked with a lot of overrides for the following:
+SYSTYPE= freebsd
+DESTDIR =
+DESTLIB = /usr/local/lib
+O=o
+A=a
+CC= cc
+LD= ld
+SHELL= /bin/sh
+CDEBUG= -g
+#TOP= ../..
+TOP= ..
+INCL = ${TOP}/include 
+PORTINCL = ${TOP}/port/${SYSTYPE}/include
+LDAPINCL = /usr/local/openldap2/include
+IRSINCL = ${TOP}/lib/irs
+LIBBIND = ${TOP}/lib/libbind.${A}
+CFLAGS=	${CDEBUG} -I${PORTINCL} -I${INCL} -I${LDAPINCL} -I${IRSINCL} -DLDAP_VERSION3_API -DIRS_NSS -DFREEBSD
+LD_LIBFLAGS= -x -r
+AR= ar cruv
+RANLIB= ranlib
+INSTALL= install
+
+
+SRCS=	ldap-nss.c \
+	ldap-pwd.c \
+	ldap-grp.c \
+	ldap-hosts.c \
+	ldap-network.c \
+	ldap-proto.c \
+	ldap-service.c \
+	util.c \
+	globals.c \
+	ltf.c \
+	resolve.c \
+	dnsconfig.c
+
+OBJS=	${SRCS:.c=.o}
+
+all: ${LIBBIND}
+
+${LIBBIND}: ${OBJS}
+	${AR} ${LIBBIND} ${ARPREF} ${OBJS} ${ARSUFF}
+	${RANLIB} ${LIBBIND}
+
+.c.${O}:
+	${CC} ${CPPFLAGS} ${CFLAGS} -c $*.c
+	-${LDS} ${LD} ${LD_LIBFLAGS} $*.${O}
+	${LDS} mv a.out $*.${O}
+
+distclean: clean
+
+clean: FRC
+	rm -f .depend a.out core ${LIB} tags
+	rm -f *.${O} *.BAK *.CKP *~
+
+depend: FRC
+	mkdep -I${INCL} -I${PORTINCL} -I${LDAPINCL} -I${IRSINCL} ${CPPFLAGS} ${SRCS}
+
+links: FRC
+	@set -e; ln -s SRC/*.[ch] .
+
+install:
+
+FRC:
+
+# DO NOT DELETE THIS LINE -- mkdep uses it.
+# DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
