@@ -31,6 +31,11 @@ extern pthread_mutex_t _nss_ldap_lock;
 extern int _nss_ldap_herrno2nssstat_tab[];
 extern int _nss_ldap_herrno2nssstat_tab_count;
 
+#ifdef IRS_NSS
+extern int _nss_ldap_errno2nssstat_tab[];
+extern int _nss_ldap_errno2nssstat_tab_count;
+#endif /* IRS_NSS */
+
 #ifdef DL_NSS
 extern void *_nss_ldap_libc_handle;
 #endif
