@@ -31,6 +31,7 @@ static char rcsId[] =
 #include <unistd.h>
 #include <string.h>
 #include <stdio.h>
+#include <errno.h>
 #include <syslog.h>
 #include <signal.h>
 #include <sys/types.h>
