@@ -107,11 +107,18 @@
 	LA_TYPE(a) = LA_TYPE_STRING; \
 	s = _nss_ldap_getbyname(&a, &pvt->result, pvt->buffer, sizeof(pvt->buffer), &errno, filter, \
 		(const char **)attributes, parser); \
-	if (s != NSS_SUCCESS) { \
-		errno = ENOENT; \
-		return NULL; \
-	} \
-	return &pvt->result
+	switch (s) { \
+		case NSS_NOTFOUND: \
+			errno = ENOENT; \
+			return NULL; \
+		case NSS_UNAVAIL: \
+			errno = EAGAIN; \
+			return NULL; \
+		case NSS_SUCCESS: \
+			return &pvt->result; \
+		case NSS_TRYAGAIN: \
+			return NULL; \
+	}
 #define LOOKUP_NUMBER(number, this, filter, attributes, parser) \
 	ldap_args_t a; \
 	struct pvt *pvt = (struct pvt *)this->private; \
@@ -121,22 +128,36 @@
 	LA_TYPE(a) = LA_TYPE_NUMBER; \
 	s = _nss_ldap_getbyname(&a, &pvt->result, pvt->buffer, sizeof(pvt->buffer), &errno, filter, \
 		(const char **)attributes, parser); \
-	if (s != NSS_SUCCESS) { \
-		errno = ENOENT; \
-		return NULL; \
-	} \
-	return &pvt->result
+	switch (s) { \
+		case NSS_NOTFOUND: \
+			errno = ENOENT; \
+			return NULL; \
+		case NSS_UNAVAIL: \
+			errno = EAGAIN; \
+			return NULL; \
+		case NSS_SUCCESS: \
+			return &pvt->result; \
+		case NSS_TRYAGAIN: \
+			return NULL; \
+	}
 #define LOOKUP_GETENT(this, filter, attributes, parser) \
 	struct pvt *pvt = (struct pvt *)this->private; \
 	NSS_STATUS s; \
 	s = _nss_ldap_getent(&pvt->state, &pvt->result, pvt->buffer, \
 		sizeof(pvt->buffer), &errno, filter, \
 		(const char **)attributes, parser); \
-	if (s != NSS_SUCCESS) { \
-		errno = ENOENT; \
-		return NULL; \
-	} \
-	return &pvt->result
+	switch (s) { \
+		case NSS_NOTFOUND: \
+			errno = ENOENT; \
+			return NULL; \
+		case NSS_UNAVAIL: \
+			errno = EAGAIN; \
+			return NULL; \
+		case NSS_SUCCESS: \
+			return &pvt->result; \
+		case NSS_TRYAGAIN: \
+			return NULL; \
+	}
 #endif
 
 #if defined(IRS_NSS)
